--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="scripts/core/io/mono.js"></script>
     <script type="text/javascript" src="scripts/core/io/osc.js"></script>
     <script type="text/javascript" src="scripts/core/io/udp.js"></script>
+    <script type="text/javascript" src="scripts/core/io/spi.js"></script>
     <script type="text/javascript" src="scripts/clock.js"></script>
     <script type="text/javascript" src="scripts/commander.js"></script>
     <script type="text/javascript" src="scripts/cursor.js"></script>
